src/objects/Mcc_login__c.object
<CustomObject>
    <description>Client Manager Logins</description>
    <fields>
        <fullName>Adwords_ID__c</fullName>
        <externalId>true</externalId>
        <label>Adwords ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Adwords_Password__c</fullName>
        <label>Adwords Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytic_Refresh_Token__c</fullName>
        <inlineHelpText>Google Analytic Refresh Token</inlineHelpText>
        <label>Analytic Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>My Passwords</relationshipLabel>
        <relationshipName>MCC_Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_Password__c</fullName>
        <label>Computer Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conv_Rate__c</fullName>
        <formula>Conversions__c /  Search_Clicks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conv Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversions__c</fullName>
        <label>Conversions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Email__c</fullName>
        <description>Facebook client manager login email</description>
        <label>Facebook Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facebook_Password__c</fullName>
        <label>Facebook Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Token__c</fullName>
        <description>facebook refresh token for api access</description>
        <label>Facebook Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gmail_Password__c</fullName>
        <description>Sponsoredlinx email password</description>
        <label>Gmail Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Login_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCC Login Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_Manager_Email__c</fullName>
        <description>Manager MCC login email</description>
        <label>MCC Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCC_Manager_Password__c</fullName>
        <label>MCC Manager Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Password__c</fullName>
        <label>NVM Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Username__c</fullName>
        <formula>&apos;bjb_&apos;+Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Passwords__c</fullName>
        <inlineHelpText>Any other work passwords</inlineHelpText>
        <label>Other Passwords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <description>Refresh token for cm mcc account. Used for Adwords stats synchronisation.</description>
        <label>Refresh Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Password__c</fullName>
        <description>Salesforce password</description>
        <label>Salesforce Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Clicks_Conv_Enabled__c</fullName>
        <label>Search Clicks - Conv Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Clicks__c</fullName>
        <label>Search Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>My Password</label>
    <listViews>
        <fullName>CM_Passwords</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NVM_Username__c</columns>
        <columns>Facebook_Email__c</columns>
        <columns>Facebook_Password__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>SponsoredLinx</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Client Manager</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>notContain</operation>
            <value>Leader,Resolution</value>
        </filters>
        <label>CM Passwords - SLX</label>
        <sharedTo>
            <group>Megan_Greentree</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CM_Passwords_GMT</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NVM_Username__c</columns>
        <columns>Facebook_Email__c</columns>
        <columns>Facebook_Password__c</columns>
        <columns>MCC_Login_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>Get More Traffic</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Client Manager</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>notContain</operation>
            <value>Leader,Resolution</value>
        </filters>
        <label>CM Passwords - GMT</label>
        <sharedTo>
            <group>Megan_Greentree</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SEO</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>Gmail_Password__c</columns>
        <columns>Computer_Password__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>SEO</value>
        </filters>
        <label>SEO</label>
        <sharedTo>
            <role>SLX_Aus_SEO_Team_A_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Team_A</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>Gmail_Password__c</columns>
        <columns>Computer_Password__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>MCC_Login_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Team A</value>
        </filters>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>SponsoredLinx</value>
        </filters>
        <label>Team A</label>
        <sharedTo>
            <group>Sharene_Moses</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Team_B</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>Computer_Password__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>MCC_Login_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Team B</value>
        </filters>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>SponsoredLinx</value>
        </filters>
        <label>Team B</label>
        <sharedTo>
            <group>Sharene_Moses</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Team_C</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>Gmail_Password__c</columns>
        <columns>Computer_Password__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>MCC_Login_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Team C</value>
        </filters>
        <label>Team C</label>
        <sharedTo>
            <group>Sharene_Moses</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Team_RM</fullName>
        <columns>NAME</columns>
        <columns>Adwords_ID__c</columns>
        <columns>Adwords_Password__c</columns>
        <columns>Gmail_Password__c</columns>
        <columns>Refresh_Token__c</columns>
        <columns>Computer_Password__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Resolution Manager</value>
        </filters>
        <label>Team RM</label>
        <sharedTo>
            <group>Sharene_Moses</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>MCC Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Passwords</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>